--- a/app/components/TeamPage/PartnerSection/PartnerSection.css
+++ b/app/components/TeamPage/PartnerSection/PartnerSection.css
@@ -3,7 +3,7 @@
     gap: 65px;
     justify-content: center;
     align-items: center;
-    padding: 100px;
+    padding: 100px var(--large-spacing);
 }
 
 .align-right {
